--- a/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
@@ -78,6 +78,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="DangNhap.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -97,6 +101,9 @@
     </Compile>
     <Compile Include="CT_ThongKe.cs">
       <DependentUpon>MyClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DangNhap.xaml.cs">
+      <DependentUpon>DangNhap.xaml</DependentUpon>
     </Compile>
     <Compile Include="DanhSachKham.cs">
       <DependentUpon>MyClinicModel.tt</DependentUpon>
@@ -153,11 +160,16 @@
     <Compile Include="Thuoc.cs">
       <DependentUpon>MyClinicModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ResourcesXAML\MyResources.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
