--- a/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
@@ -162,6 +162,7 @@
       <DependentUpon>MyClinicModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\DangNhapViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
