--- a/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ViewModels\KhamBenhViewModel.cs" />
     <Compile Include="ViewModels\KhamBenh_ChoKhamViewModel.cs" />
     <Compile Include="ViewModels\KhamBenh_DaKhamViewModel.cs" />
+    <Compile Include="ViewModels\ThanhToanViewModel.cs" />
     <Compile Include="ViewModels\TiepNhanViewModel.cs" />
     <Compile Include="ViewModels\TiepNhan_DSBenhNhanViewModel.cs" />
     <Compile Include="ViewModels\TiepNhan_DSTrongNgayViewModel.cs" />
@@ -97,6 +98,18 @@
     </Compile>
     <Compile Include="Views\ucKhamBenh_DaKham.xaml.cs">
       <DependentUpon>ucKhamBenh_DaKham.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ucNhaThuoc.xaml.cs">
+      <DependentUpon>ucNhaThuoc.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ucNhaThuoc_ChoNhanThuoc.xaml.cs">
+      <DependentUpon>ucNhaThuoc_ChoNhanThuoc.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ucNhaThuoc_NhapThuoc.xaml.cs">
+      <DependentUpon>ucNhaThuoc_NhapThuoc.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ucNhaThuoc_ThuocTrongKho.xaml.cs">
+      <DependentUpon>ucNhaThuoc_ThuocTrongKho.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ucThanhToan.xaml.cs">
       <DependentUpon>ucThanhToan.xaml</DependentUpon>
@@ -223,6 +236,22 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ucKhamBenh_DaKham.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ucNhaThuoc.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ucNhaThuoc_ChoNhanThuoc.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ucNhaThuoc_NhapThuoc.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ucNhaThuoc_ThuocTrongKho.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
