--- a/HeThongPhongMachTu/HeThongPhongMachTu/packages.config
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.2.6" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="3.1.3" targetFramework="net461" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
