--- a/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
+++ b/HeThongPhongMachTu/HeThongPhongMachTu/HeThongPhongMachTu.csproj
@@ -94,6 +94,8 @@
     <Compile Include="ViewModels\KhamBenh_ChoKhamViewModel.cs" />
     <Compile Include="ViewModels\KhamBenh_DaKhamViewModel.cs" />
     <Compile Include="ViewModels\NhaThuoc_ChoNhanThuocViewModel.cs" />
+    <Compile Include="ViewModels\NhaThuoc_ThuocTrongKhoViewModel.cs" />
+    <Compile Include="ViewModels\QuanLy_NhanVienViewModel.cs" />
     <Compile Include="ViewModels\ThanhToanViewModel.cs" />
     <Compile Include="ViewModels\ThanhToan_ChoThanhToanViewModel.cs" />
     <Compile Include="ViewModels\ThanhToan_DaThanhToanViewModel.cs" />
